--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <!-- Welcome Message -->
             <h1 class="text-5xl sm:text-6xl font-extrabold text-blue-800 mb-4 tracking-tight">
-                Welcome to Cyber4rall
+                Welcome
             </h1>
             <p class="text-xl sm:text-2xl text-gray-600 mb-10">
                 Your journey to a career in cybersecurity starts here.
