--- a/index.html
+++ b/index.html
@@ -35,24 +35,32 @@
                     <h2 class="text-2xl font-bold text-gray-800">Course Overview</h2>
                     <p class="text-gray-500">A quick look at the bootcamp structure and goals.</p>
                 </a>
-                <a href="#" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
-                    <h2 class="text-2xl font-bold text-gray-800">1. Security Principles</h2>
+                <a href="security_concepts.html" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
+                    <h2 class="text-2xl font-bold text-gray-800">1. Security Concepts</h2>
                     <p class="text-gray-500">Core concepts to build a strong foundation.</p>
                 </a>
-                <a href="#" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
-                    <h2 class="text-2xl font-bold text-gray-800">2. Business Continuity, Disaster Recovery & Incident Response</h2>
+                <a href="security_principles.html" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
+                    <h2 class="text-2xl font-bold text-gray-800">2. Security Principles</h2>
+                    <p class="text-gray-500">Foundational principles of cybersecurity.</p>
+                </a>
+                <a href="risk_management.html" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
+                    <h2 class="text-2xl font-bold text-gray-800">3. Risk Management</h2>
+                    <p class="text-gray-500">Identifying and mitigating security risks.</p>
+                </a>
+                <a href="IR_BR_DR.html" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
+                    <h2 class="text-2xl font-bold text-gray-800">4. Business Continuity, Incident Response, Disaster Recovery</h2>
                     <p class="text-gray-500">Planning for the unexpected.</p>
                 </a>
-                <a href="#" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
-                    <h2 class="text-2xl font-bold text-gray-800">3. Access Controls Concepts</h2>
+                <a href="access_control_concepts.html" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
+                    <h2 class="text-2xl font-bold text-gray-800">5. Access Control Concepts</h2>
                     <p class="text-gray-500">Managing who has access to what.</p>
                 </a>
-                <a href="#" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
-                    <h2 class="text-2xl font-bold text-gray-800">4. Network Security</h2>
+                <a href="network_security.html" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
+                    <h2 class="text-2xl font-bold text-gray-800">6. Network Security</h2>
                     <p class="text-gray-500">Protecting your digital pathways.</p>
                 </a>
-                <a href="#" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
-                    <h2 class="text-2xl font-bold text-gray-800">5. Security Operations</h2>
+                <a href="security_operations.html" class="block w-full text-left bg-gray-50 hover:bg-gray-100 rounded-xl p-6 transition-colors duration-200">
+                    <h2 class="text-2xl font-bold text-gray-800">7. Security Operations</h2>
                     <p class="text-gray-500">The day-to-day of keeping things secure.</p>
                 </a>
             </div>
