--- a/course_overview.html
+++ b/course_overview.html
@@ -29,6 +29,11 @@
 </head>
 <body class="bg-gray-900 flex items-center justify-center min-h-screen p-4">
 
+    <!-- Home Button at the Top Left -->
+    <a href="index.html" class="absolute top-4 left-4 z-10 bg-gray-700 hover:bg-gray-600 text-gray-200 font-bold py-2 px-6 rounded-full shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50">
+        Home
+    </a>
+
     <!-- Presentation Container -->
     <div id="presentation-container" class="bg-gray-800 rounded-2xl shadow-xl max-w-6xl w-full p-8 flex flex-col items-center relative overflow-hidden text-gray-200">
         
@@ -64,8 +69,7 @@
                             <h3 class="text-2xl font-bold mb-2">Social Impact & Commitment</h3>
                             <ul class="list-disc list-inside space-y-2 text-gray-300">
                                 <li>Committed to promoting digital literacy and empowering underserved communities through partnerships.</li>
-                                <li><span class="font-bold">Our Commitment:</span> We are building a secure, aware, and resilient society across Africa and the globe.
-.</li>
+                                <li><span class="font-bold">Our Commitment:</span> We are building a secure, aware, and resilient society across Africa and the globe.</li>
                             </ul>
                         </div>
                     </div>
@@ -239,9 +243,6 @@
             <button id="prev-btn" class="bg-gray-700 hover:bg-gray-600 text-gray-200 font-bold py-2 px-6 rounded-full shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50">
                 Previous
             </button>
-            <a href="index.html" class="bg-gray-700 hover:bg-gray-600 text-gray-200 font-bold py-2 px-6 rounded-full shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50">
-                Home
-            </a>
             <div id="slide-counter" class="text-lg font-medium text-gray-500 flex items-center">
                 Slide 1 of 9
             </div>
