--- a/course_overview.html
+++ b/course_overview.html
@@ -43,7 +43,7 @@
             <!-- Slide 1: Title & Goal -->
             <div id="slide-1" class="slide active">
                 <div class="flex flex-col items-center justify-center text-center py-16">
-                    <h1 class="text-6xl font-extrabold text-blue-400 mb-4">Cyber4rall Cybersecurity Bootcamp</h1>
+                    <h1 class="text-6xl font-extrabold text-blue-400 mb-4">Cyber4rall Bootcamp</h1>
                     <p class="text-2xl font-semibold text-gray-300">(9 Weeks)</p>
                     <div class="mt-12 p-8 dark-card rounded-2xl shadow-xl w-3/4">
                         <h2 class="text-3xl font-bold mb-4">🎯 Goal</h2>
