--- a/access_control_concepts.html
+++ b/access_control_concepts.html
@@ -30,6 +30,13 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
 
+    <!-- Home Button -->
+    <a href="index.html" class="fixed top-4 left-4 bg-blue-600 text-white rounded-full p-3 shadow-lg hover:bg-blue-500 transition-colors duration-200 z-50">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2-2m-2 2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+        </svg>
+    </a>
+
     <!-- Presentation Container -->
     <div id="presentation-container" class="bg-white rounded-2xl shadow-xl max-w-4xl w-full p-8 flex flex-col items-center relative overflow-hidden text-gray-800">
         
@@ -190,13 +197,7 @@
                             <p><strong>Physiological systems</strong>: measure characteristics of a person such as a <strong>fingerprint</strong>, <strong>iris scan</strong>, <strong>retinal scan</strong>, or <strong>palm scan</strong>. </p>
                         </li>
                         <li>
-                            <p><strong>Behavioral systems</strong>: measure how a person acts by measuring <strong>voiceprints</strong>, <strong>signature dynamics</strong>, and <strong>keystroke dynamics</strong>. 
-
-[Image of fingerprint scan]
- 
-
-[Image of an eye iris]
- </p>
+                            <p><strong>Behavioral systems</strong>: measure how a person acts by measuring <strong>voiceprints</strong>, <strong>signature dynamics</strong>, and <strong>keystroke dynamics</strong>. </p>
                         </li>
                     </ul>
                 </div>
