--- a/network_security.html
+++ b/network_security.html
@@ -34,9 +34,9 @@
     <div id="presentation-container" class="bg-white rounded-2xl shadow-xl max-w-4xl w-full p-8 flex flex-col items-center relative overflow-hidden text-gray-800">
         
         <!-- Home Button -->
-        <button id="home-btn" class="absolute top-4 left-4 bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-2 px-4 rounded-full shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50">
-            Home
-        </button>
+        <a href="index.html" class="absolute top-4 left-4 z-10 bg-gray-700 hover:bg-gray-600 text-gray-200 font-bold py-2 px-6 rounded-full shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50">
+        Home
+         </a>
 
         <!-- Slides -->
         <div id="slides-container" class="relative w-full h-full">
